--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://seoyoungde.github.io/mycar",
-  "name": "mycar",
+  "homepage": "https://seoyoungde.github.io/changrae",
+  "name": "changrae",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
